# openminion

./: .gitignore  .pre-commit-config.yaml  API_COMPATIBILITY.md  CHANGELOG.md  CODE_QUALITY.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  env-consolidation-guard.yml  exec-validation-os-matrix.yml  no-legacy-validation.yml  publish.yml  release.yml  tool-registration-guard.yml
controlplane/: slack-state.db
docs/: README.md  capability-packs.md  certification-readiness-matrix.md  code-quality-enforcement.md  engineering-patterns.md  getting-started.md  graph-viewer.md  long-horizon-project-worker.md  memory-namespace-queries.md  memory-review-workflow.md  pre-authoring-code-simplicity-and-readability-guideline.md  provider-capabilities.md  runtime-surfaces.md  source-tree-owner-map.md  standalone-claim-alignment.md  system-operations.md  terminal-surfaces.md  testing-and-validation.md  tests-cleanliness-rerun-2026-06-24.md
examples/: README.md
examples/agents/: README.md
examples/graph-viewer/: README.md  agents.json  repo-viewer-envelope.json
examples/identity/: README.md  sample.yaml
examples/modules/: README.md
examples/skills/: README.md
examples/starter/: README.md  channel.py  plugin.json  plugin.py  provider.py  quickstart.py  tool.py
scripts/: README.md  __init__.py  commit_message.py
scripts/baselines/: agent_execution_complexity.tsv  api_complexity.tsv  api_route_owner_imports.tsv  base_foundation_ratchet.tsv  broad_exception_baseline.tsv  chat_import_boundaries_baseline.txt  env_guard_rules.json  filename_underscore_hygiene.tsv  focus_widget_isolation_baseline.txt  max_file_loc_baseline.tsv  method_loc_baseline.tsv  mypy_baseline.json  public_surface_allowlist.tsv  pydantic_extra_allow_allowlist.tsv  services_owner_layout.tsv  type_ignore_baseline.json
scripts/ci/: build_wheels.py  check_schema_drift.py  detect_changed_modules.py  generate_bundle_manifest.py  invoke_selector_checks.py  run_migration_checks.py
scripts/common/: __init__.py  ast_imports.py  asyncio_calls.py  baseline_files.py  ci_support.py  policy.py  repo_modules.py  terminal_output.py
scripts/manual/: audit_asyncio_run_sites.py  audit_characterization_snapshot_brittleness.py  context_reset.py  llmlingua2_ab_eval.py  report_broad_exception_handlers.py  tool_surfaces.py
scripts/smoke/: crtl_baseline.py  interactive_demo_launch_smoke.py  interactive_real_config_launch_smoke.py  memory_sleep_smoke.py  performance_baseline.py  tui_demo_launch_smoke.py  tui_real_config_launch_smoke.py
scripts/validate/: __init__.py  api_layout.py  artifact_locations.py  asyncio_run_boundary.py  base_charter.py  broad_exception.py  chat_import_boundaries.py  cli_layout.py  config_constants.py  config_manager_usage.py  config_shape.py  contract_literals.py  control_value_constants.py  controlplane_delivery.py  data_root_defaults.py  direct_env_calls.py  env_config_centralization.py  execution_complexity.py  filename_underscore_hygiene.py  focus_layout.py  helper_duplicates.py  import_boundaries.py  logging_control_plane.py  max_file_loc.py  memory_boundary.py  method_loc.py  module_cycles.py  module_typed_raises.py  modules_shape.py  mypy_error_budget.py  no_raw_control_value_strings.py  no_source_e2e_artifact_refs.py  openminion_eval_layout.py  openminion_root_layout.py  passthrough.py  path_structure_hygiene.py  prompt_literals.py  public_surface.py  pydantic_extra_allow_audit.py  recovery_pipeline_contract.py  (+10 more)
src/openminion/: __init__.py  __main__.py  daemon.py  daemon_main.py
tests/: _csc_fixtures.py  conftest.py  test_agent_check_command.py  test_agent_commands.py  test_agent_feedback_helpers.py  test_agent_identity.py  test_agent_inspect.py  test_anthropic_provider.py  test_api_command.py  test_api_correlation.py  test_api_degraded_mode.py  test_api_gateway.py  test_api_health.py  test_api_metrics.py  test_api_metrics_service.py  test_api_request_parsing.py  test_api_response_headers.py  test_api_runs.py  test_api_runtime.py  test_api_sessions.py  test_api_streaming_transport.py  test_api_timeouts.py  test_api_turns.py  test_api_v1_runtime.py  test_brain_bridge_parity.py  test_capability_fallback_unit.py  test_channel_envelope_e2e.py  test_channel_envelope_regression.py  test_chat.py  test_chat_color.py  test_chat_command.py  test_chat_no_legacy.py  test_chat_progress_chain.py  test_chat_theme_regression.py  test_cli_parser.py  test_config_command.py  test_config_helpers.py  test_config_manager.py  test_config_manager_derived_configs.py  test_conversation_lifecycle.py  (+114 more)
tests/a2a/: test_a2a_audit_postgres_conformance.py  test_a2a_postgres_conformance.py  test_archive.py  test_audit_rotation_and_replaceable_stores.py  test_audit_store_characterization.py  test_audit_store_factory.py  test_google_a2a_v1_conformance.py  test_idempotency_stale_reclaim.py  test_interfaces_contract.py  test_protocol_envelope.py  test_protocol_errors.py  test_runtime_idempotency.py  test_runtime_idempotency_replay_shape.py  test_runtime_jobs.py
tests/api/: test_agent.py  test_api_layout_characterization.py  test_api_layout_validator.py  test_approval_resume.py  test_handoff.py  test_pphh_daemon_health.py  test_public_surface.py  test_shared_config.py  test_turn_api_runtime_facade.py
tests/architecture/: test_env_guard_script.py  test_marker_discipline.py  test_module_cycle_guard.py  test_module_service_boundary.py  test_no_pytest_skip_without_reason.py  test_public_surface_linter.py
tests/artifact/: test_alias_refs.py  test_artifact.py  test_artifact_postgres_conformance.py  test_blob_store.py  test_config.py  test_edge_cases.py  test_index.py  test_ingest.py  test_interfaces_contract.py  test_models.py  test_retention.py  test_views.py  utils.py
tests/base/: test_base_charter_validator.py  test_base_layout_characterization.py  test_config_shape_resolution.py  test_env.py  test_error_adapters.py  test_message_stats_contract.py  test_runtime_ops_config.py  test_runtime_system_operations_config.py  (+3 more)
(+4361 files in other folders)
